Remove obsolete scripts and update project dependencies for improved functionality and compatibility. The following files were deleted: `package-app.sh`, `run-bookify.sh`, `run-jar.sh`, `run-mac.sh`, `run-travel-agency.sh`, `travel-agency.sh`, and `Untitled.fxml`. Updated `pom.xml` to include additional JavaFX dependencies and modified `README.md` for clarity and project structure. Enhanced UI components in FXML files and applied new styles in `styles.css` for a modern look.